# summer26-diabetes-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  kpis.md  pyproject.toml
notebooks/: 01-eda-and-data-cleaning.ipynb
reports/: diabetes_automated_eda_report.html
